<resources>
    <string name="app_name">Habit Tracker</string>

    <string name="header_table">Habit</string>

    <string name="habit_popup_title_new">Create Habit</string>
    <string name="habit_popup_title_edit">Edit Habit</string>
    <string name="habit_popup_name">Name</string>
    <string name="habit_popup_description">Describe habit</string>
    <string name="habit_popup_save">Save</string>
    <string name="habit_popup_cancel">Cancel</string>
    <string name="habit_popup_select_colour">Select a colour</string>
    <string name="habit_popup_repeat">Will repeat </string>
    <string name="habit_popup_times"> times in </string>
    <string name="habit_popup_days"> days</string>
    <string name="habit_popup_notification">Notification</string>

    <string name="calendar_today_button">Go To Today</string>
    <string name="calendar_sunday">SUN</string>
    <string name="calendar_monday">MON</string>
    <string name="calendar_tuesday">TUE</string>
    <string name="calendar_wednesday">WED</string>
    <string name="calendar_thursday">THU</string>
    <string name="calendar_friday">FRI</string>
    <string name="calendar_saturday">SAT</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Tuesday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="everyday">Everyday</string>

    <string name="show_habit_overview">Overview</string>
    <string name="show_habit_first_day">\nFirst Day</string>
    <string name="show_habit_repeat">\nRepeat</string>
    <string name="show_habit_notification">\nNotification</string>
    <string name="show_habit_total">\nCompletions</string>
    <string name="show_habit_calendar">History</string>
    <string name="show_habit_streak">Streaks</string>
    <string name="show_habit_completion_rate">Completion Rate</string>

    <string name="completion_rate_missed">Missed</string>
    <string name="completion_rate_extra_missed">Extra Missed</string>
    <string name="completion_rate_completed">Completed</string>
    <string name="completion_rate_extra">Extra</string>

    <string name="confirmation_popup_title">Confirm</string>
    <string name="confirmation_popup_text">Are you sure you want to delete this habit permanently?</string>
    <string name="confirmation_popup_delete">Delete</string>

    <string name="settings_notification">Notification</string>
    <string name="notification_complete">Complete</string>
</resources>
