<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/dark_theme_background"
    android:orientation="horizontal"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.05"></RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.9">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:text="@string/confirmation_popup_title"
                android:textColor="@color/dark_theme_title"
                android:textSize="@dimen/habit_pop_up_title_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/repeat_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="30dp"
                    android:text="@string/confirmation_popup_text"
                    android:textColor="@color/dark_theme_title"
                    android:textSize="@dimen/habit_pop_up_text" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="0dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/cancel_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/delete_text"
                    android:layout_toStartOf="@+id/delete_text"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/habit_popup_cancel"
                    android:textColor="@color/dark_theme_title"
                    android:textSize="@dimen/habit_pop_up_text" />

                <TextView
                    android:id="@+id/delete_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:text="@string/confirmation_popup_delete"
                    android:textColor="@color/dark_theme_delete"
                    android:textSize="@dimen/habit_pop_up_text" />
            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.05"></RelativeLayout>


</LinearLayout>