<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/darkThemeBackground"
    android:orientation="horizontal"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.05"></RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.9">

        <!-- This is the part that's 70% of the total width. I'm inserting a LinearLayout and buttons.-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/darkThemeTitle"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/habit_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/habit_popup_name"
                android:backgroundTint="@color/darkThemeTitle"
                android:ems="10"
                android:hint="@string/habit_popup_name"
                android:inputType="textPersonName"
                android:textColor="@color/darkThemeGrey"
                android:textColorHint="@color/darkThemeHint"
                app:layout_constraintHorizontal_weight="1.00"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/habit_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/habit_popup_description"
                android:backgroundTint="@color/darkThemeTitle"
                android:ems="10"
                android:hint="@string/habit_popup_description"
                android:inputType="textPersonName"
                android:textColor="@color/darkThemeTitle"
                android:textColorHint="@color/darkThemeHint"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/habit_popup_select_colour"
                android:textColor="@color/darkThemeTitle"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/colour_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/grey_radio"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/grey_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkThemeGrey" />

                <RadioButton
                    android:id="@+id/blue_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkThemeBlue" />

                <RadioButton
                    android:id="@+id/green_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkThemeGreen" />

                <RadioButton
                    android:id="@+id/orange_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkThemeOrange" />

                <RadioButton
                    android:id="@+id/pink_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkThemePink" />

                <RadioButton
                    android:id="@+id/yellow_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkThemeYellow" />

                <RadioButton
                    android:id="@+id/purple_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/darkThemePurple" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/repeat_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_popup_repeat"
                    android:textColor="@color/darkThemeTitle"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/habit_numerator_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkThemeTitle"
                    android:inputType="numberSigned"
                    android:text="7"
                    android:textColor="@color/darkThemeTitle" />

                <TextView
                    android:id="@+id/times_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_popup_times"
                    android:textColor="@color/darkThemeTitle"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/habit_denominator_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/darkThemeTitle"
                    android:inputType="numberSigned"
                    android:text="7"
                    android:textColor="@color/darkThemeTitle" />

                <TextView
                    android:id="@+id/days_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/habit_popup_days"
                    android:textColor="@color/darkThemeTitle"
                    android:textSize="18sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="0dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/cancel_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/save_text"
                    android:layout_toStartOf="@+id/save_text"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/habit_popup_cancel"
                    android:textColor="@color/darkThemeTitle"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/save_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:text="@string/habit_popup_save"
                    android:textColor="@color/darkThemeTitle"
                    android:textSize="18sp" />
            </RelativeLayout>


        </LinearLayout><!-- 70% Width End-->

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.05"></RelativeLayout>


</LinearLayout>