<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme_background"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/overview_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/show_habit_spacing_between_layouts"
                android:background="@color/dark_theme_table_background"
                android:paddingBottom="@dimen/show_habit_left_padding">

                <TextView
                    android:id="@+id/overview_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="@dimen/show_habit_left_padding"
                    android:paddingTop="@dimen/show_habit_top_padding"
                    android:paddingBottom="@dimen/show_habit_bottom_padding"
                    android:text="@string/show_habit_overview"
                    android:textSize="@dimen/show_habit_view_text" />

                <RelativeLayout
                    android:id="@+id/overview_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/overview_text"
                    android:paddingBottom="@dimen/show_habit_bottom_padding"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/overview_first_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="First Day"
                        android:textColor="@color/dark_theme_title" />

                    <TextView
                        android:id="@+id/overview_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/overview_first_day"
                        android:gravity="center"
                        android:paddingLeft="@dimen/overview_padding"
                        android:text="Total"
                        android:textColor="@color/dark_theme_title" />

                    <TextView
                        android:id="@+id/overview_frequency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/overview_total"
                        android:gravity="center"
                        android:paddingLeft="@dimen/overview_padding"
                        android:text="Frequency"
                        android:textColor="@color/dark_theme_title" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/overview_info"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/overview_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="@dimen/overview_padding"
                        android:text="Notification"
                        android:textColor="@color/dark_theme_title" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/calendar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/show_habit_spacing_between_layouts"
                android:background="@color/dark_theme_table_background">

                <TextView
                    android:id="@+id/history_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/show_habit_left_padding"
                    android:paddingTop="@dimen/show_habit_top_padding"
                    android:text="@string/show_habit_calendar"
                    android:textSize="@dimen/show_habit_view_text" />

                <com.nathanlee.habittracker.components.CalendarView
                    android:id="@+id/calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/history_text"
                    android:nestedScrollingEnabled="false" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/streak_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/show_habit_spacing_between_layouts"
                android:background="@color/dark_theme_table_background">

                <TextView
                    android:id="@+id/streak_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/show_habit_left_padding"
                    android:paddingTop="@dimen/show_habit_top_padding"
                    android:text="@string/show_habit_streak"
                    android:textSize="@dimen/show_habit_view_text" />

                <LinearLayout
                    android:id="@+id/chart_layout"
                    android:layout_width="match_parent"
                    android:layout_height="1000dp"
                    android:layout_below="@id/streak_text">

                    <com.github.mikephil.charting.charts.HorizontalBarChart
                        android:id="@+id/streak_chart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>